# OrionX

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.jules/: bolt.md
config/: default.toml  development.toml
orionx/: __init__.py  config.py  main.py
orionx/api/: __init__.py  routes.py
orionx/compiler/: __init__.py  execution_plan.py  ir_types.py  workflow_compiler.py
orionx/core/: __init__.py  action_handlers.py  execution_logger.py  executor.py
orionx/permissions/: __init__.py  permission_gate.py  rbac.py
orionx/persistence/: __init__.py  base.py  memory.py  redis.py  sqlite.py
orionx/plugins/: __init__.py
orionx/schemas/: __init__.py  data_types.py  execution.py  workflow.py
orionx/state/: __init__.py  state_store.py
orionx/utils/: __init__.py
scripts/: init-postgres.sql
services/ai-agent/: Cargo.toml
services/ai-agent/src/: main.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs
services/api-gateway/src/handlers/: bom.rs  compliance.rs  components.rs  dashboard.rs  documents.rs  health.rs  suppliers.rs  workflows.rs
services/api-gateway/src/middleware/: auth.rs  error_handling.rs  mod.rs  request_id.rs
services/api-gateway/src/routes/: mod.rs
services/audit-trail/: Cargo.toml
services/audit-trail/src/: main.rs
services/chemical-database/: Cargo.toml
services/chemical-database/src/: cache.rs  epa_client.rs  main.rs  service.rs
services/compliance-data/: Cargo.toml
services/compliance-data/src/: main.rs
services/document-processing/: Cargo.toml
services/document-processing/src/: extraction.rs  main.rs  pdf_processor.rs  vlm_client.rs
services/email-communication/: Cargo.toml
services/email-communication/src/: main.rs  service.rs  smtp_client.rs  template_engine.rs
services/workflow-orchestration/: Cargo.toml
services/workflow-orchestration/src/: main.rs  scheduler.rs  service.rs  state_machine.rs
shared/database/: Cargo.toml
shared/database/src/: lib.rs  migrations.rs  mongodb.rs  postgres.rs  redis.rs
shared/database/src/repositories/: audit.rs  chemical.rs  compliance.rs  component.rs  email.rs  mod.rs  supplier.rs  workflow.rs
shared/models/: Cargo.toml
shared/models/proptest-regressions/: property_tests.txt
shared/models/src/: audit.rs  chemical.rs  compliance.rs  component.rs  document.rs  email.rs  lib.rs  property_tests.rs  supplier.rs  workflow.rs
shared/utils/: Cargo.toml
shared/utils/src/: config.rs  error.rs  lib.rs  logging.rs  validation.rs
shared/utils/src/bom/: extractor.rs  mod.rs  parser.rs  validator.rs
tests/: __init__.py  integration_tests.rs  property_tests.rs  repro_performance.py  test_alignment.py  test_compiler_optimization.py  test_minimal_workflow.py  test_persistence.py
