[workspace]
resolver = "2"
members = [
    "services/api-gateway",
    "services/workflow-orchestration",
    "services/ai-agent",
    "services/document-processing",
    "services/email-communication",
    "services/chemical-database",
    "services/compliance-data",
    "services/audit-trail",
    "shared/models",
    "shared/database",
    "shared/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elementa Team"]
license = "MIT"
repository = "https://github.com/elementa/supply-chain-compliance"

[workspace.dependencies]
# Async runtime and web framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br"] }

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client and email
reqwest = { version = "0.11", features = ["json", "multipart"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
imap = "2.4"

# Document processing
pdf-extract = "0.7"
calamine = "0.22"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }

# Template engine
handlebars = "4.5"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
metrics = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"
dotenvy = "0.15"

# Testing
proptest = "1.4"
tokio-test = "0.4"
testcontainers = "0.15"

# Cryptography for audit trails
sha2 = "0.10"
hex = "0.4"

# Workflow and state management
serde_yaml = "0.9"