[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orionx"
version = "0.1.0"
description = "OrionX - A pure backend workflow execution engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Arsalan Khan"}
]
keywords = ["workflow", "execution", "engine", "backend", "orionx"]

dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "async-timeout>=4.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.scripts]
orionx = "orionx.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["orionx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
