[package]
name = "elementa-ai-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
elementa-models = { path = "../../shared/models" }
elementa-database = { path = "../../shared/database" }
elementa-utils = { path = "../../shared/utils" }

tokio.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true