[package]
name = "elementa-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
elementa-models = { path = "../models" }
sqlx.workspace = true
mongodb.workspace = true
redis.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
proptest.workspace = true